welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:28: error: not found: value fairemotif
	override def run() {fairemotif()
                            ^